--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "tests"
   ],
   "devDependencies": {
-    "ionic-platform-web-client": "^0.7.1"
+    "ionic-platform-web-client": "^0.7.1",
+    "ngcordova-wrapper-nativestorage": "git://github.com/TheCocoaProject/ngcordova-wrapper-nativestorage"
   },
   "authors": [
     "ColleensCuber <livecountssite@gmail.com>"
